# ArtisanMarket-DB-Course-Project

./: .env.example  .gitignore  ABOUT.md  README.md  demo.py  docker-compose.yml  pyproject.toml
raw_data/: categories.csv  products.csv  sellers.csv  users.csv
src/: cli.py  config.py
src/db/: mongodb_client.py  neo4j_client.py  postgres_client.py  redis_client.py
src/loaders/: document_loader.py  graph_loader.py  relational_loader.py  vector_loader.py
src/services/: cart_service.py  order_service.py  recommendation_service.py  search_service.py
src/utils/: data_parser.py  error_handler.py  logger.py  purchase_generator.py
tests/: test_cart_service.py  test_cli.py  test_document_loader.py  test_graph_loader.py  test_integration.py  test_mongodb_client.py  test_neo4j_client.py  test_order_service.py  test_purchase_generator.py  test_recommendation_service.py  test_redis_client.py  test_relational_loader.py  test_search_service.py  test_vector_loader.py
